--- a/HTML table/templates/table.html
+++ b/HTML table/templates/table.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HELLO FLASK</title>
+    
+    
+    <title>HTML TABLE</title>
 </head>
 <body>
-
-    <h1>HELLO FLASK!!!!!!!!!!!!<h1>
+    <h1>HTML Table</h1>
     
 </body>
 </html>
-
