--- a/HelloFlask/templates/about.html
+++ b/HelloFlask/templates/about.html
@@ -4,12 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HELLO FLASK</title>
+    <title>About</title>
 </head>
 <body>
-
-    <h1>HELLO FLASK!!!!!!!!!!!!<h1>
-    
+    <h1>ABOUT</h1>
+    {{}}
+    {{}}
 </body>
 </html>
-
