--- a/Understanding_Routing/templates/index.html
+++ b/Understanding_Routing/templates/index.html
@@ -4,12 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HELLO FLASK</title>
+    <title>Understanding_Routing</title>
 </head>
 <body>
-
-    <h1>HELLO FLASK!!!!!!!!!!!!<h1>
+    
     
 </body>
 </html>
-
